--- a/anniv.html
+++ b/anniv.html
@@ -15,8 +15,7 @@
     </div>
     <div id="fond">
         <audio controls>
-            <source src="audio/anniversaire.mp3" type="audio/mpeg">
-            Votre navigateur ne supporte pas l'élément audio.
+            <source src="audio/anniv-piano.mp3" type="audio/mpeg">
         </audio>
         <div class="container">
             <img src="img/anatxt.png" class="anatxt"><br>
