--- a/anniv.html
+++ b/anniv.html
@@ -15,9 +15,9 @@
     </div>
     <div id="fond">
         <div class="container">
-            <audio controls>
+            <center><audio controls>
                 <source src="audio/anniv-piano.mp3" type="audio/mpeg">
-            </audio>
+            </audio></center>
         <img src="img/anatxt.png" class="anatxt"><br>
         <img src="img/coeur.png" class="coeur">
         <img src="img/feux 2.gif" class="feux">
