--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div id="fond">
+        <div class="container"></div>
         <h1>ouvre ta lettre !</h1>
-        <div class="container">
-            <img class="lettre" src="img/lettre2.png">
-            <a href="anniv.html"><img class="coeurG" src="img/coeur.gif"></a>
+        <center><img class="lettre" src="img/lettre2.png"></center>
+        <center><a href="anniv.html"><img class="coeurG" src="img/coeur.gif"></a></center>
         </div>
     </div>
 </body>
