--- a/anniv.html
+++ b/anniv.html
@@ -18,6 +18,7 @@
             <center><audio controls>
                 <source src="audio/anniv-piano.mp3" type="audio/mpeg">
             </audio></center>
+            <H1>Joyeux anniversaire !!</H1>
         <img src="img/anatxt.png" class="anatxt"><br>
         <img src="img/coeur.png" class="coeur">
         <img src="img/feux 2.gif" class="feux">
